# Distributed-GEMM-Thesis

./: .gitignore  CMakeLists.txt  README.MD
backups/: 25DCannonNCCL.cpp  2DBlockCyclicDecomposition - before 21.3.2024.cpp  2DBlockCyclicDecomposition.cpp  2DBlockCyclicDecomposition.hpp  cuBLASMPtest.cpp  mpiBenchmark.cpp  pblasDecomposition.cpp
include/: 25DCannon.hpp  25DSumma.hpp  2DBlockCyclicDecomposition.hpp  2DBlockSequentialDecomposition.hpp  DistributedMatrix.hpp  Enums.hpp  Executor.hpp  Level3.hpp  MatrixUtilities.hpp  Scale.hpp  Tile.hpp  blas.hpp  calSetup.hpp  cmatrix.h  cosmaWrapped.hpp  cuBLASMP_wrappers.hpp  cuBLASMpWrapped.hpp  cudaCommunicator.hpp  distributedMatrix.hpp  distributedParalia.hpp  errorHandling.hpp  gemm.hpp  generalUtilities.hpp  gridLayout.hpp  logging.hpp  mpiBLAS_wrappers.hpp  paraliaWrappers.hpp  pblasDecomposition.hpp  pblasGEMM.hpp  slateWrapped.hpp  summa.hpp  transfers.hpp  validation.hpp
legacy/: decomposition.cpp  decomposition.hpp  main.cpp  matrix.cpp  matrix.hpp
plotters/: DGEMM_execution_logs-PreDistributed_GEMM-SingleNode-meluxina-COSMA(Optimal).csv  DGEMM_execution_logs-PreDistributed_GEMM-SingleNode-meluxina-SLATE.csv  DGEMM_execution_logs-PreDistributed_GEMM-meluxina-COSMA(Optimal).csv  DGEMM_execution_logs-PreDistributed_GEMM-meluxina-PARALIA_Sequential.csv  DGEMM_execution_logs-PreDistributed_GEMM-meluxina-PARALiA.csv  DGEMM_execution_logs-PreDistributed_GEMM-meluxina-SLATE.csv  DGEMM_execution_logs-PreDistributed_GEMM-meluxina-cuBLASMp.csv  executionAnalysis.ipynb  fatToThinDataset.csv  squareDataset.csv  thesisPlotters.ipynb  thinToFatDataset.csv  tilingDataset.csv
plotters/tiling/: DGEMM_execution_logs-PreDistributed_GEMM-meluxina-SLATE.csv  DGEMM_execution_logs-PreDistributed_GEMM-meluxina-cuBLASMp.csv
src/: 25DCannon.cpp  25DCannonNCCL.cpp  25DSumma.cpp  2DBlockCyclicDecomposition.cpp  2DBlockSequentialDecomposition.cpp  cmatrix.cpp  cosmaBenchmark.cpp  cosmaValidators.cpp  cosmaWrapped.cpp  cuBLAS25Benchmark.cpp  cuBLASMPtest.cpp  cuBLASMpBenchmark.cpp  cuBLASMpWrapped.cpp  cudaAwareMpi.cpp  cudaCommunicator.cpp  distributedMatrix.cpp  distributedParalia.cpp  distributedParaliaValidators.cpp  dplasmaBenchmark.cpp  gemm.cpp  generalUtilities.cpp  logging.cpp  main.cpp  matrixGeneration.cu  mpiBLAS.cpp  mpiBenchmark.cpp  mpiPARALiA.cpp  paraliaBenchmark.cpp  paraliaTest.cpp  pblasDecomposition.cpp  pblasGEMM.cpp  scatterTest.cpp  slateBenchmark.cpp  slateValidator.cpp  slateWrapped.cpp  summa25Dtest.cpp  summaValidator.cpp  transfers.cpp  validation.cpp
src/BLAS/: BLASTasks.cpp  Executor.cpp  gemm.cpp  scale.cpp
src/Benchmarks/: cuBLAS25Benchmark.cpp  cuBLASMpBenchmark.cpp  distributedParaliaBenchmark.cpp  singleNodeParaliaBenchmark.cpp
src/Decompositions/: 2DBlockCyclicDecomposition.cpp  2DBlockSequentialDecomposition.cpp  oneDimensional.cpp
src/DistributedMatrix/: DistributedMatrix.cpp  Distributions.cpp  LAPACK-Compatability.cpp  ProcessGrids.cpp  Tile.cpp  TileTransfers.cpp  TileTransfersNCCL.cpp
src/Tests/: sequentialDecomposerTest.cpp
src/Transfers/: CMakeLists.txt  mpiTransfers.cpp  ncclTransfers.cpp  sharedTransfers.cpp
src/Utilities/: GeneralUtilities.cpp  MatrixUtilities.cpp  TransposeEmblems.cpp  cmatrix.cpp  cudaCommunicator.cpp  errorHandling.cpp  generalUtilities.cpp  validation.cpp
src/Wrappers/: paraliaWrappers.cpp
src/Wrappers/cuBLASMp/: calSetup.cpp  cuBLASMpValidator.cpp  cuBLASMpWrapped.cpp
tests/: DistributedMatrixTest.cpp  tileTests.cpp
